Fix patter flex wrap

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -634,6 +634,7 @@ pre {
     .form-group-pattern {
         display: flex;
         margin: 0;
+        flex-flow: row wrap;
     }
 
     .form-group-pattern > div {
